--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "ant-design-vue": "^3.2.9",
     "core-js": "^3.8.3",
+    "near-api-js": "^0.45.1",
     "pinia": "^2.0.14",
     "vue": "^3.2.13"
   },
