--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   },
   "dependencies": {
     "ant-design-vue": "^3.2.9",
+    "buffer": "^6.0.3",
     "core-js": "^3.8.3",
     "near-api-js": "^0.45.1",
     "pinia": "^2.0.14",
-    "vue": "^3.2.13"
+    "vue": "^3.2.13",
+    "vue-router": "^4.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
