--- a/package.json
+++ b/package.json
@@ -36,6 +36,13 @@
     "prettier": "^2.4.1",
     "sass": "^1.53.0",
     "sass-loader": "^13.0.2",
+    "stylelint": "^14.9.1",
+    "stylelint-config-prettier": "^9.0.3",
+    "stylelint-config-rational-order": "^0.1.2",
+    "stylelint-config-standard-scss": "^4.0.0",
+    "stylelint-order": "^5.0.0",
+    "stylelint-processor-html": "^1.0.0",
+    "stylelint-webpack-plugin": "^3.3.0",
     "typescript": "~4.5.5"
   },
   "eslintConfig": {
@@ -61,5 +68,8 @@
     "last 2 versions",
     "not dead",
     "not ie 11"
-  ]
+  ],
+  "prettier": {
+    "singleQuote": true
+  }
 }
