--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "core-js": "^3.8.3",
     "near-api-js": "^0.45.1",
     "pinia": "^2.0.14",
+    "tweetnacl": "^1.0.3",
     "vue": "^3.2.13",
     "vue-router": "^4.1.1"
   },
