--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -19,6 +19,6 @@ jobs:
         uses: JamesIves/github-pages-deploy-action@4.1.5
         with:
           branch: master
-          folder: build
+          folder: dist
           repository-name: nticket/nticket-dapp-frontend-testnet
           ssh-key: ${{ secrets.SSH_KEY_MASTER }}
